--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
- MONGODB_HOST = 'mongodb+srv://jdzapatamar:B6lfrPFEav2YSzHG@cluster0.js4q4fv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+ MONGODB_HOST = 'mongodb+srv://jdzapatamar:CWmHcFk2aqmBYDmZ@cluster0.js4q4fv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
  JWT_SECRET='4tosemestre'
