--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
+    "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.3",
-    "express": "^4.19.2"
+    "mongoose": "^8.2.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -32,6 +32,7 @@
     "@types/node": "^20.12.5",
     "nodemon": "^3.1.0",
     "shx": "^0.3.4",
+    "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.4"
   }
