--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch src --exec ts-node src/app.ts",
-    "start": "shx rm -rf build && tsc && shx cp -r src/public build && shx cp -r package.json build && node build/app.js",
+    "start": "node build/app.js",
     "build": "shx rm -rf build && tsc && shx cp -r src/public build && shx cp -r package.json build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express-session": "^1.18.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
@@ -19,6 +20,7 @@
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3"
   },
